# osprey

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: build-and-push.yaml  code-quality.yml  divine-integration-tests.yml
divine/: Dockerfile.worker  README.md  TESTING.md  docker-compose.yaml
divine/clickhouse-schema/: 001_osprey_events.sql
divine/example_data/: sample_events.jsonl
divine/nostr-kafka-bridge/: README.md  main.py  requirements.txt
divine/plugins/: pyproject.toml
divine/plugins/src/: register_plugins.py
divine/plugins/src/services/: relay_manager_sink.py  zendesk_sink.py
divine/plugins/src/udfs/: ban_nostr_event.py  check_moderation_result.py  nostr_account_age.py
divine/rules/: main.sml
divine/rules/config/: labels.yaml
divine/rules/models/: base.sml
divine/rules/models/nostr/: kind1984_report.sml  kind1_note.sml  video_event.sml
divine/rules/rules/behavioral/: index.sml  new_account_spam.sml  rapid_posting.sml  repeat_offender.sml
divine/rules/rules/content/: ai_classification.sml  index.sml
divine/rules/rules/reports/: auto_hide.sml  index.sml  moderation_service.sml
divine/scripts/: init-clickhouse.sh  test-local.sh
docs/plans/: 2026-02-27-divine-osprey-integration.md
osprey_worker/src/osprey/engine/query_language/: ast_clickhouse_translator.py
osprey_worker/src/osprey/worker/_stdlibplugin/: sink_register_clickhouse.py
osprey_worker/src/osprey/worker/sinks/sink/: clickhouse_output_sink.py
osprey_worker/src/osprey/worker/ui_api/osprey/: cli.py  singletons.py
(+9 files in other folders)
